@@ -895,7 +895,7 @@ grid1index(x, xrange, nx)
 grow.mask(M, xmargin=0, ymargin=xmargin)
 gsubdot(replacement, x)
 HermiteCoefs(order)
-handle.r.b.args(r = NULL, breaks = NULL, window, eps = NULL, rmaxdefault)
+handle.r.b.args(r = NULL, breaks = NULL, window, pixeps = NULL, rmaxdefault)
 handle.rshift.args(W, \dots, radius, width, height, edge, clip, edgedefault)
 ho.engine(model, \dots, nsim, nrmh, start, control, verb)
 hsvNA(h, s, v, \dots)
